[package]
name = "ornithology-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonhoo/ornithology"
categories = ["command-line-utilities"]
description = "A tool that parses your Twitter archive and highlights interesting data from it."

[dependencies]
anyhow = "1"
axum = { version = "0.5", features = ["http2"] }
clap = { version = "3", features = ["derive"] }
futures-util = { version = "0.3" }
indicatif = "0.16"
oauth2 = "4.2"
open = "3"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde = { version = "1", features = ["derive"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["limit", "retry"] }
url = "2"
zip = "0.6"

[[bin]]
path = "src/main.rs"
name = "ornithology"
